[tool.poetry]
name = "guess-lucky-number"
version = "0.1.0"
description = "guess your lucky number"
authors = ["myitinos <leonaedo240898@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
aiohttp = "^3.9.5"
requests = "^2.31.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
